--- a/src/components/elements/TitleCard.scss
+++ b/src/components/elements/TitleCard.scss
@@ -1,71 +1,126 @@
 .TitleCard {
-    $border-style: solid lightgray 1px;
+	$border-style: solid lightgray 1px;
 
-    // контур и фон для раскрывающегося элемента
-    .card-header {
-        cursor: pointer;
-        background-color: white;
-        border-left: $border-style;
-        border-right: $border-style;
-    }
-    &:first-of-type {
-        //отдельно для 1, так как у них по умолчанию граница только снизу
-        .accordion {
-            .card-header {
-                border-top: $border-style;
-                margin-top: 15px;
-            }
-        }
-    }
+	// контур и фон для раскрывающегося элемента
+	.card-header {
+		cursor: pointer;
+		background-color: white;
+		border-left: $border-style;
+		border-right: $border-style;
+	}
+	&:first-of-type {
+		//отдельно для 1, так как у них по умолчанию граница только снизу
+		.accordion {
+			.card-header {
+				border-top: $border-style;
+				margin-top: 15px;
+			}
+		}
+	}
 
-    .accordion { //для Min варианта
-        .card {
-            display: flex;
-            flex-direction: row;
-            padding: 5px 15px;
-            .card-img {
-                display: block;
-                max-height: 187.5px;
-                width: auto;
-                height: auto;
-                margin: auto;
-                transition: transform 0.2s;
-                &:hover {
-                    transform: scale(2);
-                    z-index: 99999;
-                }
-            }
-            .btn{
-                display: block;
-                margin: auto;
-                margin-top: 10px;
-                &:first-child{
-                    margin-top: 0px;
-                }
+	.accordion {
+		//для Min варианта
+		.card {
+			display: flex;
+			flex-direction: row;
+			padding: 5px 15px;
+			.card-img {
+				display: block;
+				max-height: 187.5px;
+				width: auto;
+				height: auto;
+				margin: auto;
+				transition: transform 0.2s;
+				&:hover {
+					transform: scale(2);
+					z-index: 99999;
+				}
+			}
+			.btn {
+				display: block;
+				margin: auto;
+				margin-top: 10px;
+				&:first-child {
+					margin-top: 0px;
+				}
+			}
+		}
+	}
 
-            }
-        }
-    }
-
-    .card {
-        margin-top: 15px;
-        display: flex;
-        flex-direction: row;
-        padding: 5px 15px;
-        .card-img {
-            display: block;
-            max-height: 125px;
-            width: auto;
-            height: auto;
-            margin: auto;
-            transition: transform 0.2s;
-            &:hover {
-                transform: scale(3);
-                z-index: 99999;
-            }
-        }
-        .card-title {
-            font-size: 2em;
-        }
-    }
+	.card {
+		margin-top: 15px;
+		display: flex;
+		flex-direction: row;
+		padding: 5px 15px;
+		.card-img-container {
+			margin: auto;
+			width: fit-content;
+			height: fit-content;
+			position: relative;
+			transition: transform 0.2s;
+			cursor: pointer;
+			.card-img {
+				display: block;
+				max-height: 125px;
+				max-width: 100px;
+				width: auto;
+				height: auto;
+			}
+			&:hover {
+				transform: scale(3);
+				z-index: 99999;
+			}
+			span {
+				display: none;
+                user-select: none;
+				&.checked {
+					display: block;
+					background: rgba(26, 71, 128, 0.7);
+					color: white;
+					position: absolute;
+					right: 0;
+					top: 0;
+					height: 100%;
+					width: 100%;
+					border-radius: calc(0.25rem - 1px);
+					font-size: 80px;
+					padding: 3px 5px;
+				}
+			}
+		}
+		.card-body.full-mode {
+			display: flex;
+			.card-left-body {
+				flex-grow: 1;
+				.card-title {
+					font-size: 2em;
+				}
+			}
+			.card-right-body {
+				flex-grow: 0;
+				flex-shrink: 1;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-evenly;
+				button {
+                    min-width: 38px;
+					padding: 2px;
+					padding-left: 10px;
+					padding-right: 10px;
+					margin: 2px;
+					position: relative;
+					span {
+						&.crowned {
+							&::before {
+								content: "👑";
+								position: absolute;
+								top: 2px;
+								left: -25px;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
